--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -15,6 +15,7 @@
     {% if spcific_record_all_tables %}
      <table>
         <tr>
+            <th></th>
             <th>customerID</th>
             <th>rbCustomerID</th>
             <th>companyName</th>
@@ -99,6 +100,71 @@
          {% endfor %}
       </table> <br><br><br>
      {% endif %}
+
+
+    <div>
+        {% if spcific_record_all_tables %}
+        {% for result in spcific_record_all_tables %}
+
+        <form class="pure-form" name="edit_form" method="POST" action='/'>
+            <label>Customer</label></br></br>
+
+            customerID: <input type="number" name="customerID" value={{result[0]}} disabled><br><br>
+            rbCustomerID*: <input type="text" name="rbCustomerID" maxlength="50" value={{result[1]}} required></br></br>
+            companyName*: <input type="text" name="companyName" maxlength="200" value={{result[2]}} required></br></br>
+            companyLocalID*: <input type="text" name="companyLocalID" maxlength="200" value={{result[3]}} required></br></br>
+            companyLocalIDType*: <input type="text" name="companyLocalIDType" maxlength="100" value={{result[4]}} required></br></br>
+            custTypeID*: <input type="number" name="custTypeID" value={{result[5]}} required></br></br>
+            startDate: <input type="date" name="startDate" value={{result[6]}}></br></br>
+            domicile*: <input type="text" name="domicile" maxlength="2" value={{result[7]}} required></br></br></br></br>
+
+            <label>PaymentSchedule</label></br></br>
+            paymentScheduleID: <input type="number" name="paymentScheduleID" value={{result[8]}} disabled></br></br>
+            value*: <input type="number" name="value" step="0.01" value={{result[9]}} required ></br></br>
+            frequency in days*: <input type="number" name="frequency" step="0.01" value={{result[10]}} required></br></br>
+            firstPaymentDate: <input type="date" name="firstPaymentDate" value={{result[11]}}></br></br>
+            paymentScheduleStartDate: <input type="date" name="paymentScheduleStartDate" value={{result[12]}}></br></br>
+            lastPaymentDate: <input type="date" name="lastPaymentDate" value={{result[13]}}></br></br>
+            active*: <input type="number" name="active" min="0" max="1" value={{result[14]}} required ></br></br></br></br>
+
+            <label>Licence</label></br></br>
+            licenceID: <input type="number" name="licenceID" value={{result[15]}} disabled></br></br>
+            type*: <input type="number" name="type" value={{result[16]}} required></br></br>
+            issueDate: <input type="date" name="issueDate" value={{result[17]}}></br></br>
+            validFrom: <input type="date" name="validFrom" value={{result[18]}}></br></br>
+            validTo: <input type="date" name="validTo" value={{result[19]}}></br></br>
+            activationCode*: <input type="text" name="activationCode" value={{result[20]}} required></br></br></br></br>
+
+            <label>User</label></br></br>
+            userID: <input type="number" name="userID" value={{result[21]}} disabled></br></br>
+            userStartDate: <input type="date" name="userStartDate" value={{result[22]}}></br></br>
+            username*: <input type="text" maxlength="100" name="username" value={{result[23]}} required></br></br>
+            city*: <input type="text" maxlength="200" name="city" value={{result[24]}}  required></br></br>
+            userDomicile*: <input type="text" maxlength="2" name="userDomicile" value={{result[25]}} required></br></br></br></br>
+
+            <label>Contact</label></br></br>
+            contactID: <input type="number" name="contactID" value={{result[26]}} disabled></br></br>
+            contactType*: <input type="number" name="contactType" value={{result[27]}}  required></br></br>
+            contactDetail*: <input type="text" maxlength="500" name="contactDetail" value={{result[28]}} required></br></br></br></br>
+
+            <label>AdminUser</label></br></br>
+            adminUserID: <input type="number" name="adminUserID" value={{result[29]}}  disabled></br></br>
+            password*: <input type="text" maxlength="200" name="password" value={{result[30]}} required></br></br>
+            paymentContact*: <input type="number" name="paymentContact" value={{result[31]}} required></br></br>
+            level*: <input type="number" name="level" value={{result[32]}} required></br></br></br></br>
+
+            <label>KeyCode</label></br></br>
+            keyCodeID: <input type="number" name="keyCodeID" value={{result[33]}} disabled></br></br>
+            keyCodeVersion*: <input type="number" name="keyCodeVersion" value={{result[34]}} required></br></br>
+            keyCode*: <input type="text" name="keyCode" maxlength="200" value={{result[35]}} required></br></br>
+            codeActive*: <input type="number" name="codeActive" value={{result[36]}} required></br></br>
+            codeActivationDate: <input type="date" name="codeActivationDate" value={{result[37]}}></br></br></br></br>
+
+            <button type="submit" value="submit">Submit</button></br></br></br></br>
+        </form> </br></br>
+
+        {% endfor %}
+        {% endif %}
     </div>
 
 </body>
