--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -16,6 +16,8 @@
         {% if spcific_record_all_tables %}
         {% for result in spcific_record_all_tables %}
 
+        <h2>Edit record {{result[0]}} - {{result[1]}} - {{result[2]}}</h2>
+
         <form class="pure-form" name="edit_form" method="POST" action='/'>
             <label>Customer</label></br></br>
 
@@ -72,6 +74,8 @@
 
             <button type="submit" value="submit">Submit</button></br></br></br></br>
         </form> </br></br>
+
+        --------------------------------------------------------------------------------------- </br></br></br></br>
 
         {% endfor %}
         {% endif %}
